fixed footer white space

--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ nav ul li a:hover, nav ul li a:active
 /* footer */ 
 #footer 
 {
+	height: auto;
 	width: auto;
 	background-color: #0072bc;
 	text-align:right;
